--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <div class="w3-twothird">
     
       <div class="w3-container w3-card w3-white w3-margin-bottom">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-info fa-fw w3-margin-right w3-xxlarge w3-text-steel-blue"></i>About</h2>
+        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-info fa-fw w3-margin-right w3-xxlarge w3-text-steel_blue"></i>About</h2>
         <p>Born in Pistoia, Italy, in 1995. I always loved practicing sports and video games since i can remember. I graduated in a scientific school, where i started learning programming. Now i am pursuing my dream job, which is making videogames.</p>
         <hr>
       </div>
