--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
         </div>
         <div class="w3-container">
-        <h2>Francesco Visco</h2>
-          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Game Design student</p>
-          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Pistoia, IT</p>
-          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>francescoalfonso.visco@mail.com</p>
-          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>3319597190</p>
+        <h2>Alessandro Picchi</h2>
+          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-#4863A0"></i>Game Design student</p>
+          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-#4863A0"></i>Pistoia, IT</p>
+          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-#4863A0"></i>francescoalfonso.visco@mail.com</p>
+          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-#4863A0"></i>3319597190</p>
           <hr>
 
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
