--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <h2>Alessandro Picchi</h2>
           <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-color:#333399"></i>Game Design student</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-color:#333399"></i>Pistoia, IT</p>
-          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-#333399"></i>francescoalfonso.visco@mail.com</p>
-          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-#333399"></i>3319597190</p>
+          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-#333399"></i>alessandro.picchi95@mail.com</p>
+          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-#333399"></i>3452958215</p>
           <hr>
 
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
