--- a/index.html
+++ b/index.html
@@ -139,18 +139,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <!-- End Page Container -->
 </div>
   
-<footer class="w3-container w3-teal w3-center w3-margin-top">
-  <p>Find me on social media</p> 
+<footer class="w3-container w3-blue w3-center w3-margin-top">
+  <p>Find me on social media</p>
  
-  <a href="https://www.facebook.com/FrancescoVisco97">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-  </a>  
-  
-  <a href="https://www.instagram.com/francevisco/?hl=it" style="text-decoration=none">
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-  </a>
-
-  <a href="https://twitter.com/ViscoFrancesco" style="text-decoration=none">
+  <a href="https://twitter.com/Picchi_Ale" style="text-decoration=none">
       <i class="fa fa-twitter w3-hover-opacity"></i>
   </a>
   
