--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     text-decoration: none;
   }
 </style>
-<body class="w3-WhiteSmoke">
+<body class="w3-light-gray">
 
 <!-- Page Container -->
 <div class="w3-content w3-margin-top" style="max-width:1400px;">
@@ -32,10 +32,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </div>
         <div class="w3-container">
         <h2>Alessandro Picchi</h2>
-          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-SteelBlue"></i>Game Design student</p>
-          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-SteelBlue"></i>Pistoia, IT</p>
-          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-SteelBlue"></i>alessandro.picchi95@mail.com</p>
-          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-SteelBlue"></i>3452958215</p>
+          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue"></i>Game Design student</p>
+          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-blue"></i>Pistoia, IT</p>
+          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-blue"></i>alessandro.picchi95@mail.com</p>
+          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-blue"></i>3452958215</p>
           <hr>
 
          
