--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p>Unity</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-blue" style="width:70%">70%</div>
-          </div><p>Game Maker</p>
+          </div>
+          <p>Game Maker</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-blue" style="width:75%">75%</div>
           </div>
