--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     text-decoration: none;
   }
 </style>
-<body class="w3-black">
+<body class="w3-light-cyan">
 
 <!-- Page Container -->
 <div class="w3-content w3-margin-top" style="max-width:1400px;">
